# protoc-gen-spring-rest

./: LICENSE  WORKSPACE  maven_install.json  protoc-gen-spring-rest.bzl
protoc-gen-spring-rest/: BUILD.bazel
protoc-gen-spring-rest/src/main/java/my/app/plugin/spring/: CodeGenerator.java  ErrorHandler.java  Main.java  RequestBuilder.java  SpringUnaryObserver.java
protoc-gen-spring-rest/src/main/resources/: spring-rest.tpl
tools/java/: BUILD.bazel
